fix<mobile_landscape> add body overflow hidden to keep required dimensions

--- a/assets/css/_mobileLayout.scss
+++ b/assets/css/_mobileLayout.scss
@@ -22,18 +22,10 @@
             li {
     
                 button::before {
-                    font-size: 1.6rem;
+                    font-size: 1rem;
     
                     @include respond(ipad-land) {
                         font-size: 1.5rem;
-                    }
-    
-                    @include respond(phone) {
-                        font-size: 1rem;
-                    }
-    
-                    @include respond(phone-land) {
-                        font-size: 1.2rem;
                     }
                 }
             }
@@ -99,10 +91,6 @@
                         }
 
                         @include respond(phone) {
-                            font-size: 2rem;
-                        }
-
-                        @include respond(phone-land) {
                             font-size: 2rem;
                         }
 
